<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opennav_visual_nav_demo</name>
  <version>0.0.1</version>
  <description>A visual navigation demo using NVIDIA Jetson, and Isaac SDKs</description>
  <maintainer email="steve@opennav.org">steve macenski</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nova_carter_bringup</exec_depend>
  <exec_depend>opennav_visual_nav_bringup</exec_depend>

  <depend>isaac_ros_visual_slam</depend>
  <depend>isaac_ros_visual_global_localization</depend>
  <depend>isaac_ros_nvblox</depend>
  <depend>isaac_ros_nitros</depend>
  <depend>isaac_ros_image_pipeline</depend>
  <depend>isaac_perceptor</depend> 
  <depend>isaac_mapping_ros</depend> 
  <depend>isaac_ros_nova_recorder</depend> 
  <depend>isaac_ros_peoplesemseg_models_install</depend>
  <depend>isaac_ros_ess_models_install</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
